--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,18 @@
     <string name="login_realizado">Login Realizado</string>
     <string name="Login_negado">Login Negado</string>
     <string name="welcome_back_description">logo</string>
+    <string name="cadastro_negado">cadastro negado</string>
+    <string name="bem_vindo">Bem vindo!</string>
+    <string name="sub_texto">Para começar, entre com suas cre</string>
+    <string name="nome_cadastro">Nome</string>
+    <string name="cpf_cadastro">CPF</string>
+    <string name="data_nascimento">Data nascimento</string>
+    <string name="telefone_cadastro">Telefone</string>
+    <string name="e_mail_cadastro">E-mail</string>
+    <string name="senha_cadastro">Senha</string>
+    <string name="login_voltar">Login</string>
+    <string name="cadastrar_se">Cadastrar</string>
+    <string name="j_possu_uma_conta">Já possuí uma conta?</string>
+    <string name="para_come_ar_entre_com_suas_credenciais">Para começar, entre com suas credenciais.</string>
+    <string name="cadastro_realizado">cadastro realizado</string>
 </resources>
