--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
     <string name="login_realizado">Login Realizado</string>
     <string name="Login_negado">Login Negado</string>
     <string name="welcome_back_description">logo</string>
+    <string name="para_come_ar_entre_com_suas_credenciais">Para começar entre com suas credênciais.\n</string>
+    <string name="bem_vindo">Bem Vindo!\n</string>
+    <string name="cpf_cadastro">CPF</string>
+    <string name="nome_cadastro">NOME</string>
+    <string name="data_nascimento">Data de nascimento</string>
+    <string name="telefone_cadastro">Telefone</string>
+    <string name="e_mail_cadastro">E-MAIL</string>
+    <string name="senha_cadastro">Senha</string>
+    <string name="cadastrar_se">CADASTRAR</string>
+    <string name="j_possu_uma_conta">Já possui uma conta?</string>
+    <string name="login_voltar">Login</string>
+    <string name="cadastro_realizado">Cadastro realizado</string>
+    <string name="cadastro_negado">Cadastro negado</string>
 </resources>
