Concerto de cores e botões

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,33 @@
 <resources>
+
+    <!--Strings da tela de cadastro-->
     <string name="app_name">the-guardian</string>
     <string name="welcome_back">Bem-vindo de volta,</string>
     <string name="get_started">Para começarmos, entre usando seu email e senha.</string>
     <string name="email_login">Email</string>
     <string name="senha_login">Senha</string>
-    <string name="sem_cadastro">Não tem conta? cadastre-se</string>
+    <string name="sem_cadastro"> Não tem conta? <font color="#5218FA">cadastre-se</font></string>
     <string name="login">LOGIN</string>
     <string name="login_realizado">Login Realizado</string>
     <string name="Login_negado">Login Negado</string>
     <string name="welcome_back_description">logo</string>
+    <string name="esqueci_senha"> <b>Esqueceu a senha?</b></string>
     <string name="logged_in_key">logged_in</string>
     <string name="preference_file_key">loginScreen</string>
+    <string name="ver_mapa"><b>ver mapa</b></string>
+    <string name="ou">ou</string>
+
+
+
+    <!--- Strings da tela de cadastro de cartão-->
+    <string name="cadastracartao">CADASTRAR CARTÃO</string>
+    <string name="cartaonumber">Número do cartão</string>
+    <string name="cartaoname">Nome no cartão</string>
+    <string name="dataexpira">Data de expiração</string>
+    <string name="cvv">CVV</string>
+    <string name="confirmar">Confirmar</string>
+    <string name="numberamostra">0000  0000  0000  0000</string>
+    <string name="nameamostra">nome</string>
+    <string name="dataamostra">00/00</string>
+
 </resources>
