Botão não apresentava mensagem de erro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="preference_file_key">loginScreen</string>
     <string name="ver_mapa"><b>ver mapa</b></string>
     <string name="ou">ou</string>
+    <string name="informemail" >Informe um email</string>
 
 
 
