--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="voltar_login"><b>LOGIN</b></string>
     <string name="cadastro_realizado">Cadastro realizado</string>
     <string name="cadastro_negado">Cadastro negado</string>
+    <string name="botão_voltar" />
 
     <!--- Strings da tela de cadastro de cartão-->
     <string name="cadastracartao">CADASTRAR CARTÃO</string>
@@ -67,6 +68,10 @@
 <!--Strings da dialog de traçar rota-->
     <string name="rota">TRAÇAR ROTA</string>
     <string name="consulta">CONSULTAR</string>
+    <string name="qrcode">QRCODE</string>
+    <string name="apresente_este_c_digo_ao_gerente">Apresente este código ao gerente!</string>
+    <string name="qrcode_imagem">qrCode</string>
+    <string name="cancelar_loc">Cancelar locação</string>
 
 
 </resources>
