tela homeScreen alterações com a cor do pin mudado e botão minhas locações

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="home">HOME</string>
     <string name="habilita_cartão">Cadastrar cartão</string>
     <string name="descrição">Sair do aplicativo</string>
+    <string name="minhas_locacoes">Minhas Locações</string>
 
     <!--Strings da tela de opção de aliguel-->
     <string name="aluga_armar">ALUGAR ARMÁRIOS</string>
