Nome do gerente vem do banco de dados para a tela principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <!--GERENTE-->
 
     <!--Home do gerente-->
-    <string name="bem_vindo_gerente">Bem-vindo(a), nome_gerente!</string>
+    <string name="bem_vindo_gerente">Bem-vindo, %s!</string>
     <string name="libera_loc">Liberar locação</string>
     <string name="abrir_armario">Abrir armário</string>
     
